--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "wedding-invitation-strapi",
+  "name": "phum-socail-strapi",
   "version": "0.1.0",
   "private": true,
   "description": "A Strapi application",
